--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
                         archlinux:latest,
                     ]
                 include:
-                    - os: archlinux:latest
+                    - image: archlinux:latest
                       coverage: true # only generate coverage on archlinux
         container:
             image: ${{ matrix.image }}
