chore(Makefile): add setup-venv target

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,6 @@ jobs:
                 include:
                     - image: 'archlinux:latest'
                       coverage: true # only generate coverage on archlinux
-                      venv: true # create a virtual environment for archlinux
         container:
             image: ${{ matrix.image }}
 
@@ -42,15 +41,7 @@ jobs:
                           ;;
                   esac
                   # Install Python dependencies
-                  # Create a virtual environment for archlinux
-                  if [[ "${{ matrix.venv }}" == "true" ]]; then
-                      python -m venv venv
-                      source venv/bin/activate
-                  fi
-                  pip3 install -r requirements.txt
-                  if [[ "${{ matrix.coverage }}" == "true" ]]; then
-                      pip3 install coverage
-                  fi
+                  make setup-venv
 
             - name: Run Install Script
               shell: bash
@@ -60,19 +51,12 @@ jobs:
 
             - name: Run Tests
               run: |
-                  if [[ "${{ matrix.venv }}" == "true" ]]; then
-                    source venv/bin/activate
-                  fi
                   make test
 
             - name: Generate coverage report
               if: ${{ matrix.coverage }}
               run: |
-                  if [[ "${{ matrix.venv }}" == "true" ]]; then
-                    source venv/bin/activate
-                  fi
-                  make coverage
-                  coverage xml
+                  make coverage-report COVERAGE_REPORT_FORMAT=xml
 
             - name: Upload coverage to Codecov
               if: ${{ matrix.coverage }}
