--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
                     python3 -m venv venv
                     source venv/bin/activate
                   fi
-                  pip3 install -r requirements.txt
+                  python3 -m pip install -r requirements.txt
 
             - name: Run Install Script
               shell: bash
