--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
                   case "${{ matrix.image }}" in
                       debian*|ubuntu*)
                           apt-get update
-                          apt-get install -y zsh curl make git gdb build-essential jq nodejs npm python3-full python3-pip locales procps golang-go
+                          apt-get install -y zsh curl make git gdb build-essential jq nodejs npm python3-venv python3-pip locales procps golang-go
                           ;;
                       fedora*)
                           dnf install -y zsh curl make git gdb gcc jq nodejs npm python3 python3-pip glibc-all-langpacks procps-ng golang
