chore(ci): configure Codecov

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,9 @@ jobs:
               uses: codecov/codecov-action@v4
               with:
                   file: ./coverage.xml
+                  token: ${{ secrets.CODECOV_TOKEN }}
                   fail_ci_if_error: true
+                  slug: bartventer/dotfiles
 
     test-macos:
         runs-on: macos-latest
