chore(ci): add `PIP_BREAK_SYSTEM_PACKAGES` env variable for Linux

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,8 @@ jobs:
     test-linux:
         runs-on: ubuntu-latest
         name: Test on Linux
+        env:
+            PIP_BREAK_SYSTEM_PACKAGES: 1 # force pip to install in user space
         strategy:
             matrix:
                 image:
