--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,7 @@ jobs:
               uses: actions/checkout@v4
 
             - name: Install Dependencies
+              shell: bash
               run: |
                   # Determine package manager based on image name
                   case "${{ matrix.image }}" in
@@ -59,6 +60,7 @@ jobs:
                   ./install.sh
 
             - name: Run Tests
+              shell: bash
               run: |
                   if [[ "${{ matrix.venv }}" == "true" ]]; then
                     source venv/bin/activate
@@ -67,6 +69,7 @@ jobs:
 
             - name: Generate coverage report
               if: ${{ matrix.coverage }}
+              shell: bash
               run: |
                   if [[ "${{ matrix.venv }}" == "true" ]]; then
                     source venv/bin/activate
