--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,7 @@ jobs:
                   token: ${{ secrets.CODECOV_TOKEN }}
                   fail_ci_if_error: true
                   slug: bartventer/dotfiles
-                  root_dir: ${{ github.workspace }}
+                  working-directory: ${{ github.workspace }}
 
     test-macos:
         runs-on: macos-latest
