--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,7 @@ jobs:
         runs-on: ubuntu-latest
         name: Test on Linux
         strategy:
+            fail-fast: false
             matrix:
                 imageName:
                     [
