fix(install.sh): change kernal-name getter

--- a/config/config.json
+++ b/config/config.json
@@ -39,9 +39,7 @@
     "nvim_profiles": {
         "default": {
             "checks": {
-                "required": [
-                    "nvim"
-                ]
+                "required": []
             },
             "parsers": [
                 "markdown_inline"
