--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,11 +7,11 @@ updates:
     commit-message:
       prefix: "chore(deps[pip]): update"
 
-  - github-actions:
-      ignore:
-        - "dependabot.yml"
-      directory: "/"
-      schedule:
-        interval: "weekly"
-      commit-message:
-        prefix: "chore(deps[github-actions]): update"
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+    ignore:
+      - dependency-name: "dependabot.yml"
+    commit-message:
+      prefix: "chore(deps[github-actions]): update"
