--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,5 +13,7 @@ updates:
       interval: "weekly"
     ignore:
       - dependency-name: "dependabot.yml"
+      - dependency-name: "codecov/codecov-action"
+        versions: ["4.x"]
     commit-message:
       prefix: "chore(deps[github-actions])"
