fix(install.sh): update node and python dependencies

--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,18 @@
 {
     "pkg_managers": {
         "apt-get": "apt-get update -y",
-        "dnf": "dnf check-update -y",
+        "dnf": "dnf upgrade -y",
         "yum": "yum check-update -y",
         "pacman": "pacman -Syu --noconfirm",
         "brew": "brew update"
+    },
+    "nvim_deps": {
+        "node_packages": [
+            "neovim"
+        ],
+        "pip_packages": [
+            "pynvim"
+        ]
     },
     "relative_paths": [
         ".zshrc",
@@ -27,11 +35,45 @@
         "fontconfig"
     ],
     "distro_packages": {
-        "arch": "lua xclip tree-sitter tree-sitter-cli unzip ripgrep fd",
-        "debian": "lua5.4 xclip unzip ripgrep fd-find python3-venv curl locales",
-        "fedora": "lua fd-find python3-devel glibc-locale-source glibc-langpack-en",
-        "ubuntu": "lua5.4 fd-find python3-venv locales",
-        "macos": "lua fd"
+        "arch": [
+            "lua",
+            "xclip",
+            "tree-sitter",
+            "tree-sitter-cli",
+            "unzip",
+            "ripgrep",
+            "fd"
+        ],
+        "debian": [
+            "lua5.4",
+            "xclip",
+            "unzip",
+            "ripgrep",
+            "fd-find",
+            "python3-venv",
+            "curl",
+            "locales"
+        ],
+        "fedora": [
+            "lua",
+            "ripgrep",
+            "fd-find",
+            "python3-devel",
+            "glibc-locale-source",
+            "glibc-langpack-en"
+        ],
+        "ubuntu": [
+            "lua5.4",
+            "ripgrep",
+            "fd-find",
+            "python3-venv",
+            "locales"
+        ],
+        "macos": [
+            "lua",
+            "ripgrep",
+            "fd"
+        ]
     },
     "term_color:": "xterm-256color",
     "oh_my_zsh_custom_theme_repo": "romkatv/powerlevel10k",
