--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,34 @@
 {
     "pkg_managers": {
-        "apt-get": "apt-get update -y",
-        "dnf": "dnf upgrade -y",
-        "yum": "yum check-update -y",
-        "pacman": "pacman -Syu --noconfirm",
-        "brew": "brew update"
+        "apt-get": {
+            "update_cmd": "apt-get update -y",
+            "install_cmd": "apt-get install -y",
+            "pre_install_commands": [
+                "curl -sL https://deb.nodesource.com/setup_lts.x | bash -"
+            ]
+        },
+        "dnf": {
+            "update_cmd": "dnf upgrade -y",
+            "install_cmd": "dnf install -y",
+            "pre_install_commands": [
+                "curl -sL https://rpm.nodesource.com/setup_lts.x | bash -"
+            ]
+        },
+        "yum": {
+            "update_cmd": "yum check-update -y",
+            "install_cmd": "yum install -y",
+            "pre_install_commands": [
+                "curl -sL https://rpm.nodesource.com/setup_lts.x | bash -"
+            ]
+        },
+        "pacman": {
+            "update_cmd": "pacman -Syu --noconfirm",
+            "install_cmd": "pacman -Syu --noconfirm"
+        },
+        "brew": {
+            "update_cmd": "brew update",
+            "install_cmd": "brew install"
+        }
     },
     "nvim_deps": {
         "node_packages": [
@@ -42,7 +66,10 @@
             "tree-sitter-cli",
             "unzip",
             "ripgrep",
-            "fd"
+            "fd",
+            "python",
+            "python-pip",
+            "nodejs"
         ],
         "debian": [
             "lua5.4",
@@ -52,7 +79,10 @@
             "fd-find",
             "python3-venv",
             "curl",
-            "locales"
+            "locales",
+            "python3",
+            "python3-pip",
+            "nodejs"
         ],
         "fedora": [
             "lua",
@@ -60,19 +90,25 @@
             "fd-find",
             "python3-devel",
             "glibc-locale-source",
-            "glibc-langpack-en"
+            "glibc-langpack-en",
+            "python3-pip",
+            "nodejs"
         ],
         "ubuntu": [
             "lua5.4",
             "ripgrep",
             "fd-find",
             "python3-venv",
-            "locales"
+            "locales",
+            "python3-pip",
+            "nodejs"
         ],
         "macos": [
             "lua",
             "ripgrep",
-            "fd"
+            "fd",
+            "python3",
+            "node"
         ]
     },
     "term_color:": "xterm-256color",
