fix(config): correct syntax error in json file

--- a/config/config.json
+++ b/config/config.json
@@ -87,7 +87,7 @@
             "python3-pip",
             "nodejs",
             "gdb",
-            "build-essential",
+            "build-essential"
         ],
         "fedora": [
             "lua",
