--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,6 +88,9 @@ jobs:
               with:
                   go-version: '1.22.x'
 
+            - name: Add Go to PATH
+              run: echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
+
             - name: Install Dependencies
               run: |
                   brew update
