--- a/config/config.json
+++ b/config/config.json
@@ -184,7 +184,9 @@
                 "go-debug-adapter"
             ],
             "linters": [
-                "golangci-lint"
+                "golangci-lint",
+                "staticcheck",
+                "revive"
             ],
             "formatters": [
                 "goimports-reviser",
