--- a/config/config.json
+++ b/config/config.json
@@ -43,7 +43,7 @@
         ".config/nvim",
         ".tmux.conf"
     ],
-    "plugins": {
+    "ohmyzsh_plugins": {
         "zsh-syntax-highlighting": "https://github.com/zsh-users/zsh-syntax-highlighting.git",
         "zsh-autosuggestions": "https://github.com/zsh-users/zsh-autosuggestions.git",
         "zsh-history-substring-search": "https://github.com/zsh-users/zsh-history-substring-search.git"
