--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -25,7 +25,17 @@
                 "timonwong.shellcheck",
                 "Remisa.shellman",
                 "rpinski.shebang-snippets"
-            ]
+            ],
+            "settings": {
+                "json.schemas": [
+                    {
+                        "fileMatch": [
+                            "*/config.json"
+                        ],
+                        "url": "https://raw.githubusercontent.com/bartventer/dotfiles/master/config/config.schema.json"
+                    }
+                ]
+            }
         }
     }
 }
