--- a/config/config.json
+++ b/config/config.json
@@ -122,7 +122,7 @@
             "node"
         ]
     },
-    "term_color:": "xterm-256color",
+    "term_color": "xterm-256color",
     "oh_my_zsh_custom_theme_repo": "romkatv/powerlevel10k",
     "font_name": "MesloLGS NF",
     "nvim_profiles": {
@@ -145,7 +145,6 @@
                 "yaml-language-server",
                 "json-lsp"
             ],
-            "daps": [],
             "linters": [
                 "actionlint"
             ],
@@ -159,11 +158,9 @@
                     "bash"
                 ]
             },
-            "parsers": [],
             "lsps": [
                 "bash-language-server"
             ],
-            "daps": [],
             "linters": [
                 "shellcheck"
             ],
@@ -211,7 +208,6 @@
             "lsps": [
                 "typescript-language-server"
             ],
-            "daps": [],
             "linters": [
                 "eslint_d"
             ],
@@ -228,8 +224,6 @@
             "lsps": [
                 "pyright"
             ],
-            "daps": [],
-            "linters": [],
             "formatters": [
                 "black"
             ]
@@ -243,9 +237,6 @@
             "lsps": [
                 "dockerfile-language-server"
             ],
-            "daps": [],
-            "linters": [],
-            "formatters": [],
             "parsers": [
                 "dockerfile"
             ]
@@ -258,10 +249,7 @@
             },
             "lsps": [
                 "docker-compose-language-service"
-            ],
-            "daps": [],
-            "linters": [],
-            "formatters": []
+            ]
         }
     }
 }
